tests/scheduling/fail/basic-2.stderr
error: scheduling error: the following expressions form a cycle : b, a
 --> tests/scheduling/fail/basic-2.rs:8:19
  |
8 |         a : int = b,
  |                   ^
